# concilium-iq

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/: actions.py  auth.py  care_gaps.py  labs.py  patients.py  risk.py  summary.py
backend/app/core/: explainability.py  risk_engine.py  rule_engine.py
backend/app/db/: base.py  session.py
backend/app/graph/: neo4j_client.py  seed_data.py
backend/app/models/: lab.py  patient.py
backend/app/schemas/: patient.py  summary.py
backend/app/services/: action_service.py  care_gap_service.py  lab_service.py  patient_service.py  risk_service.py  summary_service.py
backend/app/tests/: test_risk_engine.py  test_rule_engine.py
backend/app/tests/fixtures/: patient_high_risk.json  patient_low_risk.json  patient_very_high_risk.json
frontend/: Dockerfile  index.html  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/Layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/Pages/: Dashboard.tsx  PatientDetail.tsx  PatientList.tsx
infrastructure/docker/nginx/: nginx.conf
infrastructure/docker/postgres/: init.sql
patient-portal/: Dockerfile  package.json
patient-portal/app/: layout.tsx  page.tsx
scripts/: seed_data.py
